<resources>
    <string name="app_name">智能家庭医生</string>
    <string name="home">网络医院</string>
    <string name="home_title">康美医疗</string>
    <string name="before_agree">预约</string>
    <string name="register_order">预约挂号</string>
    <string name="online_diagnose">在线问诊</string>
    <string name="my_service">我的服务</string>
    <string name="profile">个人中心</string>
    <string name="modify_pwd_cannot_equal">修改密码不能和原始密码一致</string>
    <string name="free_consult">免费咨询</string>
    <string name="string_member">会员</string>
    <string name="duty_consult">义诊咨询</string>
    <string name="home_doctor">家庭医生</string>
    <string name="today_duty_diagnose">今日义诊</string>
    <string name="user_address">配送地址</string>
    <string name="personal_data">个人资料</string>
    <string name="user_member">家庭成员</string>
    <string name="modify_password">修改登录密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="my_doctor">家庭医生</string>
    <string name="my_consult">我的咨询</string>
    <string name="my_register_order">我的预约</string>
    <string name="my_diagnose">药品订单</string>
    <string name="service_duration">%1$s ~ %2$s</string>
    <string name="old_password">原始密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码</string>
    <string name="confirm">确认</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_confirm_pwd">请输入确认密码</string>
    <string name="new_pwd_not_eq_confirm">确认密码不一致</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="modify_password_failed">修改密码失败</string>
    <string name="p_please_input_true_pwd">密码格式不正确</string>
    <string name="p_true_pwd_format">密码长度应该为6到18个字符</string>
    <string name="logout">退出登录</string>
    <string name="doctor_service">医生服务</string>
    <string name="image_word_consult">图文咨询</string>
    <string name="clinic">义诊</string>
    <string name="buy_home_doctor">购买家庭医生</string>
    <string name="doctor_schedule">我的排班</string>
    <string name="im_consult">图文咨询</string>
    <string name="pay_user">就诊人</string>
    <string name="pay_user2">就诊人\u0020\u0020\u0020\u0020</string>
    <string name="please_select">请选择</string>
    <string name="please_input_content">请输入就诊内容</string>
    <string name="please_input_content1">请输入您的就诊体验！</string>
    <string name="pay_now">立即支付</string>
    <string name="im_consult_upload_image_notify">添加化验单及患病部位照片，以便得到医生更好的答复</string>
    <string name="select_user_member">选择就诊人</string>
    <string name="please_select_usermember">请选择就诊人</string>
    <string name="on_create_im_consult_record">正在创建图文咨询记录</string>
    <string name="create_im_consult_record_failed">创建图文咨询记录失败</string>
    <string name="create_im_consult_free_failed">创建免费咨询记录失败</string>
    <string name="create_im_consult_duty_failed">创建义诊咨询记录失败</string>
    <string name="user_member_info">就诊人信息</string>
    <string name="submit">提交</string>
    <string name="consult_time">咨询时间</string>
    <string name="consult_user_member">就诊人</string>
    <string name="look_reply">查看回复</string>
    <string name="consult_doctor">咨询医生</string>
    <string name="service_content">服务内容</string>
    <string name="service_period">服务周期</string>
    <string name="service_content_notify">购买%1$s医生的家庭医生服务，一个月内可以不限次 数的咨询向他进行图文咨询和语音咨询预约！</string>
    <string name="service_price">服务价格</string>
    <string name="service_period_content">%1$s~%2$s</string>
    <string name="service_price_content">&lt;font color="#F9A821"&gt;%1$s&lt;/font&gt;元/月</string>
    <string name="create_im_consult_record_success">创建图文咨询成功</string>
    <string name="create_im_consult_free_success">创建免费咨询成功</string>
    <string name="create_im_consult_duty_success">创建义诊咨询成功</string>
    <string name="wait_reply">待回复</string>
    <string name="not_reply">未回复</string>
    <string name="already_reply">已回复</string>
    <string name="to_str">至</string>
    <string name="get_doctor_schedule_failed">获取医生排班失败</string>
    <string name="on_load_doctor_schedule">正在获取医生排班</string>
    <string name="please_select_doctor_schedule">请选择预约时间</string>
    <string name="video_diagnose">视频诊疗</string>
    <string name="voice_consult">语音咨询</string>
    <string name="user_expired_please_login">账户已过期，请重新登录！</string>
    <string name="function_not_open">此功能暂未开放</string>
    <string name="open_video">进入视频</string>
    <string name="call_phone">进入语音</string>
    <string name="have_buyed">已支付</string>
    <string name="wait_pay">待支付</string>
    <string name="wait_pay2">未支付</string>
    <string name="no_dress">未筛选</string>
    <string name="no_receive">未领取</string>
    <string name="pay_canceled">已取消</string>
    <string name="pay_apply_refund">申请退款</string>
    <string name="pay_refuse_refund">拒绝退款</string>
    <string name="pay_refunded">已退款</string>
    <string name="video_service_not_open">视频诊疗服务暂未开启</string>
    <string name="im_service_not_open">语音咨询服务暂未开启</string>
    <string name="family_service_not_open">家庭医生服务暂未开启</string>
    <string name="image_service_not_open">图文咨询服务暂未开启</string>
    <string name="buy_family_doctor_service_failed">添加家庭医生服务失败</string>
    <string name="buy_family_doctor_service_success">添加家庭医生服务成功</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="km_wallet">康美钱包</string>
    <string name="doctor_service_is_null">暂无医生服务信息</string>
    <string name="on_get_service_info">正在获取医生服务信息</string>
    <string name="get_doctor_service_info_failed">获取医生信息失败</string>
    <string name="expired">已过期</string>
    <string name="on_find_pwd">正在回密码</string>
    <string name="find_pwd_failed">找回密码失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_confirming">支付结果确认中</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_function_cannot_use">此支付功能暂时无法使用</string>
    <string name="on_paying">正在支付</string>
    <string name="get_pay_info_error">获取支付信息失败</string>
    <string name="register_hint">请输入密码，至少六位</string>
    <string name="find_password_hint">请输入新密码，至少六位</string>
    <string name="not_install_alipay_app">未检测到支付宝，无法使用该方式支付</string>
    <string name="user_not_login">未登录</string>
    <string name="user_login_or_register">登录/注册</string>
    <string name="user_not_login_click_login">未登录,点击登录</string>
    <string name="pay_cancel">取消支付</string>
    <string name="pay_on_bank">银行处理中</string>
    <string name="service_used">已使用</string>
    <string name="service_complete">已完成</string>
    <string name="back_to_home">返回</string>
    <string name="doctor_clinic_unused">该医生没有剩余义诊次数</string>
    <string name="doctor_clinic_unused_chance">剩余机会:</string>
    <string name="doctor_clinic_no_limit">不限制</string>
    <string name="delivering">配送中</string>
    <string name="diagnose_detail">处方详情</string>
    <string name="women">女性</string>
    <string name="man">男性</string>
    <string name="have_no_diagnose">没有诊断</string>
    <string name="have_no_drug">没有药品</string>
    <string name="buy_failed">购买失败</string>
    <string name="buy_success">购买成功</string>
    <string name="system_error_please_try_again">系统原因，请稍后再试</string>
    <string name="price_format">%s元</string>
    <string name="delivery_ing">配送中</string>
    <string name="order_no">订单编号</string>
    <string name="buy_prescription">购买处方</string>
    <string name="plz_choose_shipping_address">请选择收货地址</string>
    <string name="confirm_order_ing">正在确认订单</string>
    <string name="carrier_source">承运来源: </string>
    <string name="waybill_no">货运单号: </string>
    <string name="pay_free">免支付</string>
    <string name="pay_for_km">康美支付</string>
    <string name="pay_for_wx">微信支付</string>
    <string name="pay_for_ali">支付宝</string>
    <string name="pay_for_bank_card">中国银联</string>
    <string name="pay_for_master_card">MasterCard</string>
    <string name="pay_for_pay_pal">PayPal</string>
    <string name="pay_for_visa">VISA</string>
    <string name="pay_for_his">HIS</string>
    <string name="pay_for_account">余额</string>
    <string name="service_duration_2">%1$s-%2$s</string>
    <string name="guide_enter">立即体验</string>
    <string name="patient_info">患者信息</string>
    <string name="patient_name">姓名</string>
    <string name="patient_loading">加载中</string>
    <string name="patient_sex">性别</string>
    <string name="patient_age">年龄</string>
    <string name="patient_phone_number">联系电话</string>
    <string name="patient_order_info">订单详情</string>
    <string name="order_total">共计</string>
    <string name="commodity_num">件商品</string>
    <string name="order_total_money">总价：</string>
    <string name="pay_info">支付信息</string>
    <string name="delivery_state">配送状态</string>
    <string name="logistic_info">物流信息</string>
    <string name="wait_send_out">待发货</string>
    <string name="wait_audit">待审核</string>
    <string name="audited">已审核</string>
    <string name="stock_up">已备货</string>
    <string name="delivered">已发货</string>
    <string name="arrived">已送达</string>
    <string name="search_doctor_hospital">搜索医生姓名</string>
    <string name="receiving_info">收货信息</string>
    <string name="receiving_name">收货人:</string>
    <string name="receiving_address">收货地址:</string>
    <string name="delivery_way_info">配送方式: 本订单由康美大药房配送</string>
    <string name="consult_prompt">*请描述您的问题，包括身体状况、疾病和症状等，医生会根据你的描述给出专业意见，并且保证您的隐私安全。（最少10个字）</string>
    <string name="remaining_opportunity">剩余机会:</string>
    <string name="diagnose">诊断</string>
    <string name="prescribe">RP</string>
    <string name="inspection_doctor">看诊医生</string>
    <string name="diagnose_foot_hint_one">注：1.取药是请当面核对药品名称、规格、数量;</string>
    <string name="diagnose_foot_hint_two">2.延长处方用量时间需咨询专业医生</string>
    <string name="about_us">关于我们</string>
    <string name="soft_introduce">软件介绍</string>
    <string name="liscense_info">版权信息</string>
    <string name="kangmei">康美健康云 版权所有</string>
    <string name="kangmei_english">Copyright ©2015&#8211;2017 Kangmei Healthcloud.ALL Rights Reserverd.</string>
    <string name="introduce">“康美医疗”为康美药业旗下打造的一款为用户提供专业在线健康医疗服务的平台。患者可通过在线问诊交流模式，精准的数据健康管理机制，专业轻松的就医体验，快速解决各种健康问题。
【主要功能】
1、在线问诊：用户通过购买图文/语音/视频咨询/家庭医生服务后，在相应的时间内，可直接和医生交流，问诊结束后，如医生开具处方，用户收到处方并确认付款后，处方药品会直接快递给用户，成功实现在线问诊。
2、预约挂号：医院没有了号源怎么办？选择适合自己的医生，“挂号”功能一键搞定，无需排队。
3、免费咨询：提交咨询内容和相关化验单以及患病部位照片，可得到医生的免费回复。
4、今日义诊：用户选择适合自己的医生，提交义诊咨询内容和化验单以及患病部位照片。如医生回复咨询，可查看义诊咨询回复。
【温馨提示】
“康美医疗”App为用户版。如果您是医生，请在App Store搜索“康美医生”App下载体验。</string>
    <string name="duty_notify">可以向开放义诊的医生进行免费图文咨询</string>
    <string name="in_hospital_doctor">住院医师</string>
    <string name="primary_doctor">主治医师</string>
    <string name="second_doctor">副主任医师</string>
    <string name="director_doctor">主任医师</string>
    <string name="my_package">我的套餐</string>
    <string name="account_management">账户管理</string>
    <string name="computer_based_patient_record">电子病历</string>
    <string name="settings">设置</string>
    <string name="setting">设置中...</string>
    <string name="my_doctor2">我的医生</string>
    <string name="expert_recommend">专家推荐</string>
    <string name="none_expert_recommend">暂无专家推荐</string>
    <string name="cancel2">取消</string>
    <string name="buy">购买</string>
    <string name="diagnose_can_buy">可购买的药品处方</string>
    <string name="string_exit_yes">确认</string>
    <string name="string_exit_no">取消</string>
    <string name="plz_input_mobile">请输入手机号</string>
    <string name="plz_input_code">请输入验证码</string>
    <string name="plz_input_pay_password">请输入支付密码</string>
    <string name="mobile_no">手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="btn_bind">绑定</string>
    <string name="forget_pay_password">忘记密码?</string>
    <string name="buy_now">立即购买</string>
    <string name="service_plan">服务套餐</string>
</resources>