<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include layout="@layout/app_base_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:text="@string/receiving_info"
                android:drawableRight="@drawable/next_unselect"
                />

            <RelativeLayout
                android:id="@+id/ll_consignee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiving_name" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/tv_name_title"
                    android:text="@string/patient_loading"
                    android:textColor="@color/text_normal" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="18200000000"
                    android:textColor="@color/text_normal" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ll_consignee_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_address_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiving_address" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/tv_address_title"
                    android:singleLine="true"
                    android:text="@string/patient_loading"
                    android:textColor="@color/text_normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_order_info"
                    android:textColor="@color/md_teal_600" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="2016-08-12"
                    android:textColor="@color/md_teal_600" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divide_size"
                android:background="@color/divider"
                />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/patient_loading" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divide_size"
                android:background="@color/divider"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/app_padding"
                android:paddingRight="@dimen/app_padding"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/order_total" />

                <TextView
                    android:id="@+id/tv_drug_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/patient_loading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/commodity_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginLeft="3dp"
                    android:text="@string/order_total_money" />

                <TextView
                    android:id="@+id/tv_drug_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/patient_loading"
                    android:textColor="@color/app_yellow"
                    android:textSize="@dimen/big_font_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/small_font_size"
                android:text="@string/delivery_way_info" />

            <Button
                android:id="@+id/pay_now"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="40dp"
                android:onClick="onClick"
                android:text="@string/pay_now" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
