<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include layout="@layout/app_base_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_padding"
        android:background="@drawable/card_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="@string/service_plan"
            android:textColor="@color/second_text_color" />

        <TextView
            android:id="@+id/service_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="1个月"
            android:textColor="@color/second_text_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/app_color_white">
        <!--自定义属性解释: tagSpacing:各个标签之间的距离    lineSpacing:行间距-->
        <com.winson.ui.widget.TagCloudLayout
            android:id="@+id/tcl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tagSpacing="10dp"
            app:lineSpacing="7dp"/>
    </LinearLayout>

    <View style="@style/dividing_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_padding"
        android:background="@drawable/card_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="@string/service_period"
            android:textColor="@color/second_text_color" />


        <TextView
            android:id="@+id/service_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="@string/service_period_content"
            android:textColor="@color/second_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_padding"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="@string/service_content"
            android:textColor="@color/second_text_color" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_size"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/service_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_padding"
            android:text="@string/service_content_notify" />

    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_size"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_service_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            />
        <Button
            android:id="@+id/pay_now"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/yellow_solid_btn"
            android:text="@string/buy_now" />
    </LinearLayout>
</LinearLayout>