<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_pay_password"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plz_input_pay_password"
        android:textColor="@color/color_main_string"
        android:padding="15dp"
        android:gravity="center_horizontal"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/color_sub_string"
        android:text="@string/forget_pay_password"
        android:paddingRight="10dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_exit_no"
            android:textColor="@color/color_main_green"
            android:gravity="center_horizontal"
            />
        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_exit_yes"
            android:textColor="@color/color_main_green"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

</LinearLayout>
